hphp/hack/test/typecheck/class_refinements/unsupported.php.exp
File "unsupported.php", line 15, characters 41-60:
Invalid type hint (Typing[4469])
  File "unsupported.php", line 15, characters 41-60:
  Unsupported refinement, only class types can be refined
File "unsupported.php", line 24, characters 24-48:
Unsupported refinement, only class types can be refined (Typing[4469])
File "unsupported.php", line 25, characters 32-34:
You are trying to access the method `get` but this is a value of generic type TBox0 (Typing[4062])
  File "unsupported.php", line 19, characters 53-53:
  Definition is here
File "unsupported.php", line 30, characters 23-47:
Unsupported refinement, only class types can be refined (Typing[4469])
File "unsupported.php", line 31, characters 32-34:
You are trying to access the method `get` but this is a value of generic type TBox0 (Typing[4062])
  File "unsupported.php", line 19, characters 53-53:
  Definition is here
